update login flow and playwright test
